# transformer-from-scratch

./: README.md  pyproject.toml
src/: decoder.py  encoder.py  rough.ipynb  utils.py
src/transformer/: __init__.py
