[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "crazycrash101", email = "unknown@domain.invalid" }
]
dependencies = [
    "cowsay>=6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transformer"]
